[gd_scene load_steps=38 format=2]

[ext_resource path="res://Sprites/scenario/background.png" type="Texture" id=1]
[ext_resource path="res://Sprites/menu/plataformsMenu.png" type="Texture" id=2]
[ext_resource path="res://Sprites/menu/doorOpening3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/menu/doorClosing2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/menu/doorClosed2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/menu/doorOpened2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/menu/doorOpening2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/menu/doorOpening1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/menu/doorClosing3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/menu/doorClosing1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/menu/doorOpened1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/menu/doorClosed1.png" type="Texture" id=12]
[ext_resource path="res://Cenas/PlayerMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sprites/Font/Montserrat-Medium.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Sprites/menu/menuSaida1.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Sair.gd" type="Script" id=16]
[ext_resource path="res://Sprites/menu/elevador1.png" type="Texture" id=17]
[ext_resource path="res://Sprites/menu/menuSaida2.png" type="Texture" id=18]
[ext_resource path="res://Sprites/menu/painel_senha.png" type="Texture" id=19]
[ext_resource path="res://Scripts/Jogar.gd" type="Script" id=20]
[ext_resource path="res://Scripts/MenuNiveis.gd" type="Script" id=21]
[ext_resource path="res://Scripts/Creditos.gd" type="Script" id=22]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=23]
[ext_resource path="res://Sprites/Font/Montserrat-SemiBold.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://Scripts/Painel.gd" type="Script" id=25]
[ext_resource path="res://Sprites/menu/painel_tela.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 72 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 12 ), ExtResource( 5 ) ],
"loop": true,
"name": "closed",
"speed": 2.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 12 ) ],
"loop": false,
"name": "closing",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 11 ), ExtResource( 6 ) ],
"loop": true,
"name": "opened",
"speed": 2.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 11 ) ],
"loop": false,
"name": "opening",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 16 )

[sub_resource type="DynamicFont" id=5]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 1
extra_spacing_space = 3
font_data = ExtResource( 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "fechado",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 16 )

[sub_resource type="DynamicFont" id=9]
size = 9
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=10]
size = 60
use_filter = true
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=11]
size = 60
use_filter = true
font_data = ExtResource( 24 )

[node name="Menu" type="Node2D"]
script = ExtResource( 23 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Saida" type="AnimatedSprite" parent="."]
position = Vector2( 0, 448 )
frames = SubResource( 3 )
playing = true
centered = false

[node name="Plataforms" type="StaticBody2D" parent="."]

[node name="Scenario" type="Sprite" parent="Plataforms"]
texture = ExtResource( 2 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Plataforms"]
polygon = PoolVector2Array( 0, 608, 864, 608, 864, 576, 896, 576, 896, 544, 928, 544, 928, 512, 960, 512, 960, 480, 992, 480, 992, 448, 1280, 448, 1280, 32, 96, 32, 96, 288, 896, 288, 928, 320, 896, 352, 96, 352, 96, 448, 0, 448, 0, 0, 1376, 0, 1376, 768, 0, 768 )

[node name="Sair" type="Area2D" parent="."]
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sair"]
position = Vector2( -8, 528 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="Sair"]
one_shot = true

[node name="Jogar" type="Area2D" parent="."]
position = Vector2( 336, 512 )
collision_layer = 128
collision_mask = 0
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Jogar"]
frames = SubResource( 1 )
animation = "closed"
frame = 1
playing = true
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jogar"]
position = Vector2( 32, 80 )
shape = SubResource( 2 )

[node name="Niveis" type="Area2D" parent="."]
position = Vector2( 560, 512 )
collision_layer = 128
collision_mask = 0
script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Niveis"]
frames = SubResource( 1 )
animation = "closed"
frame = 1
playing = true
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Niveis"]
position = Vector2( 32, 80 )
shape = SubResource( 2 )

[node name="Creditos" type="Area2D" parent="."]
position = Vector2( 176, 192 )
collision_layer = 128
collision_mask = 0
script = ExtResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Creditos"]
frames = SubResource( 1 )
animation = "closed"
frame = 1
playing = true
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Creditos"]
position = Vector2( 32, 80 )
shape = SubResource( 2 )

[node name="Dicas_restantes" type="Label" parent="."]
margin_left = 976.0
margin_top = 88.0
margin_right = 1257.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 5 )
text = "Dicas restantes: 3"
align = 2

[node name="Elevador" type="Area2D" parent="."]
position = Vector2( 1120, 320 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Elevador"]
frames = SubResource( 6 )
animation = "fechado"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Elevador"]
position = Vector2( 48, 112 )
shape = SubResource( 7 )

[node name="Painel" type="Area2D" parent="."]
position = Vector2( 1088, 384 )
script = ExtResource( 25 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Painel"]
position = Vector2( 16, 16 )
texture = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Painel"]
position = Vector2( 16, 16 )
shape = SubResource( 8 )

[node name="Label" type="Label" parent="Painel"]
margin_top = -16.0
margin_right = 32.0
custom_fonts/font = SubResource( 9 )
text = "Enter"
align = 1
valign = 1
percent_visible = 0.0

[node name="PlayerMenu" parent="." instance=ExtResource( 13 )]
position = Vector2( 32, 544 )

[node name="UserSenha" type="Area2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="UserSenha"]
margin_right = 1376.0
margin_bottom = 768.0
color = Color( 0, 0, 0, 0.823529 )

[node name="Sprite" type="Sprite" parent="UserSenha"]
texture = ExtResource( 26 )
centered = false

[node name="User" type="LineEdit" parent="UserSenha/Sprite"]
margin_left = 472.0
margin_top = 280.0
margin_right = 904.0
margin_bottom = 368.0
custom_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_fonts/font = SubResource( 10 )
align = 1
max_length = 8

[node name="Password" type="LineEdit" parent="UserSenha/Sprite"]
margin_left = 472.0
margin_top = 456.0
margin_right = 904.0
margin_bottom = 544.0
custom_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_fonts/font = SubResource( 11 )
align = 1
max_length = 4
secret = true

[connection signal="timeout" from="Timer" to="Jogar" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Niveis" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Creditos" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Sair" to="Sair" method="_on_Sair_body_entered"]
[connection signal="timeout" from="Sair/Timer" to="Sair" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Jogar" to="Jogar" method="_on_Jogar_body_entered"]
[connection signal="body_exited" from="Jogar" to="Jogar" method="_on_Jogar_body_exited"]
[connection signal="body_entered" from="Niveis" to="Niveis" method="_on_Niveis_body_entered"]
[connection signal="body_exited" from="Niveis" to="Niveis" method="_on_Niveis_body_exited"]
[connection signal="body_entered" from="Creditos" to="Creditos" method="_on_Creditos_body_entered"]
[connection signal="body_exited" from="Creditos" to="Creditos" method="_on_Creditos_body_exited"]
[connection signal="body_entered" from="Painel" to="Painel" method="_on_Painel_body_entered"]
[connection signal="body_exited" from="Painel" to="Painel" method="_on_Painel_body_exited"]
